<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MovieActivity"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_margin="20dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image"
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Фильм"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTV">

                <TextView
                    android:id="@+id/ratingKinopoiskTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTV" />

                <TextView
                    android:id="@+id/enNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="Film"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/yearTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000, "
                    android:textColor="@color/color_text_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/genresTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="жанр"
                    android:textColor="@color/color_text_grey"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/countriesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Страна, "
                    android:textColor="@color/color_text_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lengthTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123 мин, "
                    android:textColor="@color/color_text_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ageRatingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PG-13"
                    android:textColor="@color/color_text_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="Нет краткого описания"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/actors"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

            <TextView
                android:id="@+id/no_actorsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actorsRV"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:listitem="@layout/item_actor"
                tools:itemCount="2"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posters"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actorsRV" />

            <TextView
                android:id="@+id/no_postersTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/posters_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/postersCarousel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_corners"
                    app:autoPlay="true"
                    app:autoPlayDelay="3000"
                    app:carouselType="SHOWCASE"
                    app:imageScaleType="centerCrop"
                    app:showCaption="false"
                    app:showNavigationButtons="false" />
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>